; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/emxx_udc/extr_emxx_udc.c__nbu2ss_pullup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/emxx_udc/extr_emxx_udc.c__nbu2ss_pullup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nbu2ss_udc = type { i64, %struct.TYPE_4__, %struct.TYPE_3__*, i64 }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

@ESHUTDOWN = common dso_local global i32 0, align 4
@PUE2 = common dso_local global i32 0, align 4
@CONNECTB = common dso_local global i32 0, align 4
@USB_SPEED_UNKNOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nbu2ss_udc*, i32)* @_nbu2ss_pullup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_nbu2ss_pullup(%struct.nbu2ss_udc* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.nbu2ss_udc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.nbu2ss_udc* %0, %struct.nbu2ss_udc** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.nbu2ss_udc*, %struct.nbu2ss_udc** %4, align 8
  %8 = getelementptr inbounds %struct.nbu2ss_udc, %struct.nbu2ss_udc* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i32, i32* @ESHUTDOWN, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %3, align 4
  br label %62

14:                                               ; preds = %2
  %15 = load i32, i32* %5, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %40

17:                                               ; preds = %14
  %18 = load %struct.nbu2ss_udc*, %struct.nbu2ss_udc** %4, align 8
  %19 = getelementptr inbounds %struct.nbu2ss_udc, %struct.nbu2ss_udc* %18, i32 0, i32 3
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %39

22:                                               ; preds = %17
  %23 = load %struct.nbu2ss_udc*, %struct.nbu2ss_udc** %4, align 8
  %24 = getelementptr inbounds %struct.nbu2ss_udc, %struct.nbu2ss_udc* %23, i32 0, i32 2
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = call i32 @_nbu2ss_readl(i32* %26)
  %28 = load i32, i32* @PUE2, align 4
  %29 = or i32 %27, %28
  %30 = load i32, i32* @CONNECTB, align 4
  %31 = xor i32 %30, -1
  %32 = and i32 %29, %31
  store i32 %32, i32* %6, align 4
  %33 = load %struct.nbu2ss_udc*, %struct.nbu2ss_udc** %4, align 8
  %34 = getelementptr inbounds %struct.nbu2ss_udc, %struct.nbu2ss_udc* %33, i32 0, i32 2
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 0
  %37 = load i32, i32* %6, align 4
  %38 = call i32 @_nbu2ss_writel(i32* %36, i32 %37)
  br label %39

39:                                               ; preds = %22, %17
  br label %61

40:                                               ; preds = %14
  %41 = load %struct.nbu2ss_udc*, %struct.nbu2ss_udc** %4, align 8
  %42 = getelementptr inbounds %struct.nbu2ss_udc, %struct.nbu2ss_udc* %41, i32 0, i32 2
  %43 = load %struct.TYPE_3__*, %struct.TYPE_3__** %42, align 8
  %44 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %43, i32 0, i32 0
  %45 = call i32 @_nbu2ss_readl(i32* %44)
  %46 = load i32, i32* @CONNECTB, align 4
  %47 = or i32 %45, %46
  %48 = load i32, i32* @PUE2, align 4
  %49 = xor i32 %48, -1
  %50 = and i32 %47, %49
  store i32 %50, i32* %6, align 4
  %51 = load %struct.nbu2ss_udc*, %struct.nbu2ss_udc** %4, align 8
  %52 = getelementptr inbounds %struct.nbu2ss_udc, %struct.nbu2ss_udc* %51, i32 0, i32 2
  %53 = load %struct.TYPE_3__*, %struct.TYPE_3__** %52, align 8
  %54 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %53, i32 0, i32 0
  %55 = load i32, i32* %6, align 4
  %56 = call i32 @_nbu2ss_writel(i32* %54, i32 %55)
  %57 = load i32, i32* @USB_SPEED_UNKNOWN, align 4
  %58 = load %struct.nbu2ss_udc*, %struct.nbu2ss_udc** %4, align 8
  %59 = getelementptr inbounds %struct.nbu2ss_udc, %struct.nbu2ss_udc* %58, i32 0, i32 1
  %60 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %59, i32 0, i32 0
  store i32 %57, i32* %60, align 8
  br label %61

61:                                               ; preds = %40, %39
  store i32 0, i32* %3, align 4
  br label %62

62:                                               ; preds = %61, %11
  %63 = load i32, i32* %3, align 4
  ret i32 %63
}

declare dso_local i32 @_nbu2ss_readl(i32*) #1

declare dso_local i32 @_nbu2ss_writel(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
